<resources>
    <string name="app_name">Moodly</string>
    <string name="title_activity_view_mood_list">ViewMoodList</string>
    <string name="title_activity_view_social_lists">ViewSocialLists</string>
    <string name="action_settings">Settings</string>
    <string name="action_social">Social</string>
    <string name="add_comment">Add Comment</string>
    <string name="view_comment">View Comments</string>
    <string name="no_comment">No comments found for this mood.</string>
    <string name="picture">Picture</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="load_more">Load More Moods</string>
    <string name="load_comments">Load More Comments</string>
    <string name="Register">Sign Up</string>
    <string name="mood_list_header">History</string>
    <string name="set_location">Save Location</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="emotion">Emotion</string>
    <string name="reason_text">Reason</string>
    <string name="save_mood">Save Mood</string>
    <string name="filter">Filter</string>
    <string name="show_map">Show Map</string>
    <string name="social">Social</string>
    <string name="add_mood">Adding a New Mood</string>
    <string name="location">Location</string>
    <string name="social_situation">Social Situation</string>
    <string name="title_activity_see_map">Map</string>
    <string name="remove_follower_button">Remove Follower(s)</string>
    <string name="unfollow_button">Unfollow User(s)</string>
    <string name="accept_request_button">Accept Request(s)</string>
    <string name="decline_request_button">Decline Request(s)</string>
    <string name="send_request_button">Send Follow Request(s)</string>
    <string name="search_button">Search</string>
</resources>
