<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/moodImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moodImage"
        android:layout_marginBottom="5dp"
        android:text="Mood"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/view_date"
        android:layout_alignStart="@+id/view_date" />

    <Spinner
        android:id="@+id/spinner_emotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mood"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:animateLayoutChanges="true"
        android:visibility="visible"
        android:layout_alignLeft="@+id/mood"
        android:layout_alignStart="@+id/mood" />

    <EditText
        android:id="@+id/view_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_emotion"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:focusable="false"
        android:hint="Date  (MM/DD/YYYY)"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner_SS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_date"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/view_date"
        android:layout_alignStart="@+id/view_date" />

    <TextView
        android:id="@+id/ReasonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_SS"
        android:layout_marginLeft="20dp"
        android:text="Reason"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/view_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ReasonText"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:ems="20"
        android:hint="Why are you in this mood?"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="16sp"
        android:visibility="visible"
        android:layout_alignLeft="@+id/ReasonText"
        android:layout_alignStart="@+id/ReasonText" />


    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_reason"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:text="@string/location"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="@color/colorPrimary"
        tools:text="@string/location" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:clickable="true"
        app:elevation="2dp"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_mylocation"
        android:layout_alignBottom="@+id/locationText"
        android:layout_toRightOf="@+id/locationText"
        android:layout_toEndOf="@+id/locationText" />

    <Button
        android:id="@+id/addComments"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/mapButton"
        android:text="@string/add_comment"
        tools:text="@string/add_comment" />

    <Button
        android:id="@+id/viewComments"
        style="@android:style/Widget.Material.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@+id/addComments"
        android:text="@string/view_comment"
        tools:text="@string/view_comment" />

</RelativeLayout>